--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "url": "https://github.com/svandecappelle/nodebb-plugin-charts/issues"
   },
   "readmeFilename": "README.md",
-  "homepage": "https://github.com/svandecappelle/nodebb-plugin-charts",
- }
+  "homepage": "https://github.com/svandecappelle/nodebb-plugin-charts"
+}
