--- a/package.json
+++ b/package.json
@@ -26,5 +26,17 @@
     "url": "https://github.com/svandecappelle/nodebb-plugin-charts/issues"
   },
   "readmeFilename": "README.md",
-  "homepage": "https://github.com/svandecappelle/nodebb-plugin-charts"
+  "homepage": "https://github.com/svandecappelle/nodebb-plugin-charts",
+  "readme": "nodebb-plugin-charts\n====================\n\nCharts into post of nodebbplugins\n",
+  "_id": "nodebb-plugin-charts@0.0.1",
+  "dist": {
+    "shasum": "4df601dad257fcb421a30ae3193bcd0c9c9a9514"
+  },
+  "dependencies": {
+    "node-uuid": ">=1.4.1"
+  }, 
+  "readme": "# NodeBB charts\n\nThis NodeBB plugin is a parser that allows users to write posts using [charts of Jqplot].\n\nTo customise options for the parser, please consult the \"help page\" page in the administration panel, under the \"Plugins\" heading.\n\n## Installation\n\n    npm install nodebb-plugin-charts",
+  "_resolved": "git://github.com/svandecappelle/nodebb-plugin-charts/#4eb68613905f6ddd1efc1a73a381e429681b7cc2",
+  "_from": "git://github.com/svandecappelle/nodebb-plugin-charts/",
+  "_id": "nodebb-plugin-charts@0.0.1"
 }
